2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: belong should be big32, I guess that patch
	was untested ;)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Robert Dale <robdale@gmail.com>
	to add the application/x-dar mime-type (Closes: #6760)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add magic for the PGN mime-type,
	make it a text/plain sub-class, change the human-readable name
	to "PGN chess game notation" (Closes: #8286)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Have the Go SGF records be a sub-class
	of text/plain to allow opening them with a text editor, add
	magic for version 3 and 4 of those files (Closes: #8058)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add magic to detect AutoCAD DXF files
	(Closes: #9472)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make mbox a sub-class of text/plain
	so that a text-editor can be used to open it (Closes: #9859)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Frédéric Crozat
	<fcrozat@mandriva.com> to remove the StarOffice-provided
	application/vnd.palm mime-type, and add the globs and aliases
	to application/x-palm-database instead (Closes: #7406)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Mario Carrión <mario@monouml.org>
	to add mime-types for OCL scripts (Closes: #7327)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Sebastian Dröge <slomo@ubuntu.com>
	to not mis-detect Java files as C when they start with comments
	(Closes: #9407), same trick with CSS files (Closes: #9469)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add Lua scripts to the mime-types with help from
	Reuben Thomas (Closes: #8715)

2007-02-05  Bastien Nocera  <hadess@hadess.net>
