@@ -1,5 +1,10 @@
 2007-02-05  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Patch from Sebastian Dröge <slomo@ubuntu.com>
+	to add the Wavpack mime-type (Closes: #6746)
+
+2007-02-05  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: belong should be big32, I guess that patch
 	was untested ;)
 
